// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="play"
/>
`;

exports[`renders correctly 2`] = `
<div
  className="pause"
/>
`;

exports[`renders correctly 3`] = `
<div
  className="play"
/>
`;
